# VideoPlayer

./: CMakeLists.txt  main.cpp
src/: window.cpp
